fix screen overflow

--- a/apps/src/routes/homePage.css
+++ b/apps/src/routes/homePage.css
@@ -32,7 +32,7 @@
     max-width: 70vw;
     color: white;
     font-size: 28px;
-    margin: 15vh auto;
+    margin: 2em auto;
     position: relative;
 }
 
